crates/zizmor/tests/integration/snapshots/integration__snapshot__cache_poisoning-10.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"cache-poisoning/publisher-step.yml\")).run()?"
---
error[cache-poisoning]: runtime artifacts potentially vulnerable to a cache poisoning attack
  --> @@INPUT@@:21:9
   |
21 |         uses: Swatinem/rust-cache@82a92a6e8fbeee089604da2575dc567ae9ddeaab
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cache enabled by default here
...
28 |         uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974
   |         -------------------------------------------------------------------------- runtime artifacts usually published here
   |
   = note: audit confidence → Low
   = note: this finding has an auto-fix

1 findings (1 fixable): 0 informational, 0 low, 0 medium, 1 high
